Multiple QoF improvement

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -156,6 +156,26 @@
             <tbody id="items-tbody">
             </tbody>
           </table>
+
+          <!-- My Borrowed Items -->
+          <div id="my-borrowed-items" style="margin-top: 2rem;">
+            <h3>我的借用</h3>
+            <table class="data-table">
+              <thead>
+                <tr>
+                  <th>物品名称</th>
+                  <th>唯一编号</th>
+                  <th>数量</th>
+                  <th>借出时间</th>
+                  <th>预计归还</th>
+                  <th>状态</th>
+                  <th>操作</th>
+                </tr>
+              </thead>
+              <tbody id="my-borrowed-tbody">
+              </tbody>
+            </table>
+          </div>
         </section>
 
         <!-- 入库管理 -->
