--- a/frontend/index.html
+++ b/frontend/index.html
@@ -89,6 +89,7 @@
           <li class="admin-only"><a href="#" onclick="showSection('approvals')">审批管理</a></li>
           <li class="admin-only"><a href="#" onclick="showSection('logs')">操作日志</a></li>
           <li class="admin-only"><a href="#" onclick="showSection('users')">用户管理</a></li>
+          <li class="admin-only"><a href="#" onclick="showSection('import-export')">导入/导出</a></li>
           <li><a href="#" onclick="showSection('profile')">个人信息</a></li>
         </ul>
       </aside>
@@ -318,6 +319,125 @@
           </table>
         </section>
 
+        <!-- 导入/导出（仅管理员）-->
+        <section id="import-export-section" class="section admin-only">
+          <h2>数据导入/导出</h2>
+
+          <div class="import-export-container">
+            <!-- 分类管理 -->
+            <div class="import-export-card">
+              <h3>分类信息</h3>
+              <div class="import-export-actions">
+                <div class="export-group">
+                  <h4>导出</h4>
+                  <button class="btn btn-primary" onclick="exportData('categories', 'all')">导出所有分类</button>
+                  <div class="form-group">
+                    <label>选择特定分类：</label>
+                    <select id="export-category-select"></select>
+                    <button class="btn" onclick="exportSelectedCategory()">导出选中分类</button>
+                  </div>
+                </div>
+                <div class="import-group">
+                  <h4>导入</h4>
+                  <input type="file" id="import-categories-file" accept=".json" style="display:none">
+                  <button class="btn btn-secondary" onclick="document.getElementById('import-categories-file').click()">选择文件</button>
+                  <div class="form-group">
+                    <label>导入模式：</label>
+                    <select id="import-categories-mode">
+                      <option value="merge">合并（跳过重复）</option>
+                      <option value="replace">完全替换</option>
+                    </select>
+                    <button class="btn btn-primary" onclick="importData('categories')">开始导入</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- 物品管理 -->
+            <div class="import-export-card">
+              <h3>物品信息</h3>
+              <div class="import-export-actions">
+                <div class="export-group">
+                  <h4>导出</h4>
+                  <button class="btn btn-primary" onclick="exportData('items', 'all')">导出所有物品</button>
+                  <div class="form-group">
+                    <label>按分类导出：</label>
+                    <select id="export-items-category-select"></select>
+                    <button class="btn" onclick="exportItemsByCategory()">导出选中分类物品</button>
+                  </div>
+                </div>
+                <div class="import-group">
+                  <h4>导入</h4>
+                  <input type="file" id="import-items-file" accept=".json" style="display:none">
+                  <button class="btn btn-secondary" onclick="document.getElementById('import-items-file').click()">选择文件</button>
+                  <div class="form-group">
+                    <label>导入模式：</label>
+                    <select id="import-items-mode">
+                      <option value="merge">合并（跳过重复）</option>
+                      <option value="replace">完全替换</option>
+                    </select>
+                    <button class="btn btn-primary" onclick="importData('items')">开始导入</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- 用户管理 -->
+            <div class="import-export-card">
+              <h3>用户信息</h3>
+              <div class="import-export-actions">
+                <div class="export-group">
+                  <h4>导出</h4>
+                  <button class="btn btn-primary" onclick="exportData('users', 'all')">导出所有用户</button>
+                </div>
+                <div class="import-group">
+                  <h4>导入</h4>
+                  <p class="warning-text">注意：导入的用户默认密码为 123456</p>
+                  <input type="file" id="import-users-file" accept=".json" style="display:none">
+                  <button class="btn btn-secondary" onclick="document.getElementById('import-users-file').click()">选择文件</button>
+                  <div class="form-group">
+                    <label>导入模式：</label>
+                    <select id="import-users-mode">
+                      <option value="merge">合并（跳过重复）</option>
+                      <option value="replace">完全替换（保留当前管理员）</option>
+                    </select>
+                    <button class="btn btn-primary" onclick="importData('users')">开始导入</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- 操作日志 -->
+            <div class="import-export-card">
+              <h3>操作日志</h3>
+              <div class="import-export-actions">
+                <div class="export-group full-width">
+                  <h4>导出</h4>
+                  <div class="form-row">
+                    <div class="form-group">
+                      <label>开始日期：</label>
+                      <input type="date" id="export-logs-start">
+                    </div>
+                    <div class="form-group">
+                      <label>结束日期：</label>
+                      <input type="date" id="export-logs-end">
+                    </div>
+                  </div>
+                  <div class="form-row">
+                    <div class="form-group">
+                      <label>按用户筛选：</label>
+                      <select id="export-logs-user">
+                        <option value="">全部用户</option>
+                      </select>
+                    </div>
+                  </div>
+                  <button class="btn btn-primary" onclick="exportLogs()">导出日志</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
         <!-- 个人信息 -->
         <section id="profile-section" class="section">
           <h2>个人信息</h2>
@@ -388,5 +508,6 @@
   <div id="modal-container"></div>
 
   <script src="app.js"></script>
+  <script src="import-export.js"></script>
 </body>
 </html>
